--- a/data-structures-and-algorithms/data-structures-and-algorithms.csproj
+++ b/data-structures-and-algorithms/data-structures-and-algorithms.csproj
@@ -6,4 +6,8 @@
     <RootNamespace>data_structures_and_algorithms</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Include="..\.editorconfig" Link=".editorconfig" />
+  </ItemGroup>
+
 </Project>
