--- a/data-structures-and-algorithms/data-structures-and-algorithms.csproj
+++ b/data-structures-and-algorithms/data-structures-and-algorithms.csproj
@@ -10,4 +10,8 @@
     <None Include="..\.editorconfig" Link=".editorconfig" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TestLinkedList\TestLinkedList.csproj" />
+  </ItemGroup>
+
 </Project>
