--- a/TestLinkedList/TestLinkedList.csproj
+++ b/TestLinkedList/TestLinkedList.csproj
@@ -19,4 +19,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\data-structures-and-algorithms\data-structures-and-algorithms.csproj" />
+  </ItemGroup>
+
 </Project>
